--- a/Dia12/styles/styles.css
+++ b/Dia12/styles/styles.css
@@ -52,7 +52,7 @@ button{
     gap: 20px;
     margin-top: 70px;
     overflow: scroll;
-    height: calc(84vh - 260px);
+    height: calc(84vh - 210px);
     flex-direction: column;
     align-items: center;
 }
@@ -65,7 +65,7 @@ button{
     color: white;
     background-color: black;
     border-radius: 30px;
-    max-width: 80%;
+    max-width: 20%;
     opacity: 50%;
 }
 .botonesNegativos{
@@ -79,7 +79,7 @@ button{
     margin-left: 8px;
 }
 .eliminadonegativo img{
-    width: 50px;
+    width: 60px;
     background-color: white;
     border-radius: 100%;
 }
@@ -102,7 +102,8 @@ button{
     color: white;
     background-color: black;
     border-radius: 30px;
-    max-width: 80%;
+    max-width: 20%;
+    opacity: 50%;
 }
 .botones{
     display: flex;
