:sparkles:Dia 12 terminado

--- a/Dia12/styles/styles.css
+++ b/Dia12/styles/styles.css
@@ -52,9 +52,11 @@ button{
     gap: 20px;
     margin-top: 70px;
     overflow: scroll;
-    height: calc(84vh - 210px);
+    height: calc(84vh - 300px);
+    display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 .capsulanegativa{
     padding-top: 3px;
@@ -65,8 +67,8 @@ button{
     color: white;
     background-color: black;
     border-radius: 30px;
-    max-width: 20%;
-    opacity: 50%;
+    max-width: 80%;
+    opacity: 65%;
 }
 .botonesNegativos{
     display: flex;
@@ -89,10 +91,6 @@ button{
     text-decoration: line-through;
 }
 
-
-
-
-
 .capsula{
     padding-top: 3px;
     padding-bottom: 3px;
@@ -102,8 +100,7 @@ button{
     color: white;
     background-color: black;
     border-radius: 30px;
-    max-width: 20%;
-    opacity: 50%;
+    max-width: 80%;
 }
 .botones{
     display: flex;
